--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sun System</title>
+    <link rel="stylesheet" href="./index.css" />
   </head>
-  <body></body>
+  <body>
+    <ul>
+      <li><a class="link" href="#neptune">Neptune</a></li>
+      <li><a class="link" href="#uranus">Uranus</a></li>
+      <li><a class="link" href="#saturn">Saturn</a></li>
+      <li><a class="link" href="#jupiter">Jupiter</a></li>
+      <li><a class="link" href="#mars">Mars</a></li>
+      <li><a class="link" href="#earth">Earth</a></li>
+      <li><a class="link" href="#venus">Venus</a></li>
+      <li><a class="link" href="#mercury">Mercury</a></li>
+      <li><a class="link" href="#sun">Sun</a></li>
+    </ul>
+    <main>
+      <section id="neptune">
+        <img src="./img/Neptune.jpg" alt="Neptune" />
+      </section>
+      <section id="uranus"><img src="./img/Uranus.jpg" alt="Uranus" /></section>
+      <section id="saturn"><img src="./img/Saturn.jpg" alt="Saturn" /></section>
+      <section id="jupiter">
+        <img src="./img/Jupiter.jpg" alt="Jupiter" />
+      </section>
+      <section id="mars"><img src="./img/Mars.jpg" alt="Mars" /></section>
+      <section id="earth">
+        <img src="./img/Blue_Marble.jpg" alt="Earth" />
+      </section>
+      <section id="venus"><img src="./img/Venus.jpg" alt="Venus" /></section>
+      <section id="mercury">
+        <img src="./img/Mercury.jpg" alt="Mercury" />
+      </section>
+      <section id="sun"><img src="./img/Sun.jpg" alt="Sun" /></section>
+    </main>
+  </body>
 </html>
