--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <ul>
+    <ul class="list-link">
       <li><a class="link" href="#neptune">Neptune</a></li>
       <li><a class="link" href="#uranus">Uranus</a></li>
       <li><a class="link" href="#saturn">Saturn</a></li>
@@ -19,23 +19,33 @@
       <li><a class="link" href="#sun">Sun</a></li>
     </ul>
     <main>
-      <section id="neptune">
-        <img src="./img/Neptune.jpg" alt="Neptune" />
+      <section class="section" id="neptune">
+        <img class="img" src="./img/Neptune.jpg" alt="Neptune" />
       </section>
-      <section id="uranus"><img src="./img/Uranus.jpg" alt="Uranus" /></section>
-      <section id="saturn"><img src="./img/Saturn.jpg" alt="Saturn" /></section>
-      <section id="jupiter">
-        <img src="./img/Jupiter.jpg" alt="Jupiter" />
+      <section class="section" id="uranus">
+        <img class="img" src="./img/Uranus.jpg" alt="Uranus" />
       </section>
-      <section id="mars"><img src="./img/Mars.jpg" alt="Mars" /></section>
-      <section id="earth">
+      <section class="section" id="saturn">
+        <img class="img" src="./img/Saturn.jpg" alt="Saturn" />
+      </section>
+      <section class="section" id="jupiter">
+        <img class="img" src="./img/Jupiter.jpg" alt="Jupiter" />
+      </section>
+      <section class="section" id="mars">
+        <img class="img" src="./img/Mars.jpg" alt="Mars" />
+      </section>
+      <section class="section" id="earth">
         <img src="./img/Blue_Marble.jpg" alt="Earth" />
       </section>
-      <section id="venus"><img src="./img/Venus.jpg" alt="Venus" /></section>
-      <section id="mercury">
-        <img src="./img/Mercury.jpg" alt="Mercury" />
+      <section class="section" id="venus">
+        <img class="img" src="./img/Venus.jpg" alt="Venus" />
       </section>
-      <section id="sun"><img src="./img/Sun.jpg" alt="Sun" /></section>
+      <section class="section" id="mercury">
+        <img class="img" src="./img/Mercury.jpg" alt="Mercury" />
+      </section>
+      <section class="section" id="sun">
+        <img class="img" src="./img/Sun.jpg" alt="Sun" />
+      </section>
     </main>
   </body>
 </html>
