--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
         <img class="img" src="./img/Mars.jpg" alt="Mars" />
       </section>
       <section class="section" id="earth">
-        <img src="./img/Blue_Marble.jpg" alt="Earth" />
+        <img class="img" src="./img/Blue_Marble.jpg" alt="Earth" />
       </section>
       <section class="section" id="venus">
         <img class="img" src="./img/Venus.jpg" alt="Venus" />
